# errconv

./: CHANGES  Makefile.in  README  README.md  TODO  configure  configure.in  errc.cpp  errc.h  errconv.cpp  errcpp.cpp  errcpp.h  errdef.cpp  errdef.h  errjava.cpp  errjava.h  errors.txt  errtest.cpp
errconv/: AUTHORS  CHANGES  Makefile  Makefile.in  README  TODO  configure  configure.in  definition.rtf  errc.cpp  errc.h  errconv.cpp  errcpp.cpp  errcpp.h  errdef.cpp  errdef.h  errjava.cpp  errjava.h  errors.txt  errtest.cpp  swx_libmak.in
errconv/po/: af_ZA.po
