dnl Process this file with autoconf to produce the configure script
AC_INIT(errconv.cpp)

dnl i10n
PACKAGE=errconv
VERSION=1.2.3
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(ALL_LINGUAS)
AC_SUBST(INSTALL)
AC_SUBST(INSTALL_DATA)
AC_SUBST(bindir)
AC_SUBST(CFLAGS)
AC_SUBST(LOCAL)
AC_SUBST(ALL)

prefix="/usr/local"

ALL_LINGUAS="af_ZA"

dnl Check for programs.
AC_PROG_CPP
AC_PROG_INSTALL
dnl AM_GNU_GETTEXT

dnl Check for PO files.
AC_PATH_PROG( MSGHDR, msgfmt, [] )
if test ! -x "$MSGHDR"; then
 CFLAGS=[-I.]
 LOCAL=[""]
 ALL=[""]
else
 CFLAGS=[-D__LOCAL__]
 LOCAL=$MSGHDR
 ALL=["lang"]
 AC_MSG_CHECKING( "all languages present" )
 for f in $ALL_LINGUAS; do
  if test ! -f po/$f.po; then
    AC_MSG_RESULT( "$f missing" )
    AC_MSG_ERROR( "Please make sure all the language files is present in the po/ subdirectory." )
  fi
 done
 AC_MSG_RESULT( $ALL_LINGUAS )
fi


dnl check for getopt in standard library
AC_SUBST(ERRCONVOBJ)
ERRCONVOBJ="$ERRCONVOJB errconv.o errdef.o errcpp.o errjava.o errc.o"
AC_CHECK_FUNCS(getopt_long , , [ERRCONVOBJ="$ERRCONVOBJ getopt.o getopt1.o"] ) 

dnl Check for header files
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

ALL="$ALL errconv"

dnl Finalize output
AC_OUTPUT(Makefile)
